--- a/my-calculator/src/App.css
+++ b/my-calculator/src/App.css
@@ -1,3 +1,32 @@
+
+* {
+  font-family: sans-serif;
+}
+
 .App {
-  text-align: center;
+ display: flex;
+ justify-content: center;
+ align-items: center;
+min-height: 100%;
+flex-direction: column;
+}
+input,
+button {
+  font-size: 20px;
+  padding: 10px;
+  border-radius: 5px;
+}
+input {
+  display: block;
+  margin-bottom: 20px;
+}
+button {
+  border: 1px solid gray;
+  background: whitesmoke;
+  margin-right: 5px;
+}
+button:nth-last-child(2),
+button:nth-last-child(1) {
+  background: tomato;
+  color: white;
 }
